--- a/index.html
+++ b/index.html
@@ -12,34 +12,50 @@
         />
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body class="d-flex">
-        <div class="container col-8 p-4 my-auto">
+    <body class="d-flex flex-column">
+        <div class="container col-10 col-sm-8 col-md-6 col-lg-4 p-4 my-auto rounded-2 bg-light shadow">
+            <h2>Newsletter</h2>
+            <hr />
             <form class="my-auto">
                 <div class="mb-3">
-                    <label class="form-label" for="name">Nome:</label>
-                    <input class="form-control" type="text" name="name" id="name" />
+                    <label class="form-label fw-bold" for="name">Nome:</label>
+                    <input class="form-control shadow-sm" type="text" name="name" id="name" />
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label" for="email">E-mail:</label>
-                    <input class="form-control" type="email" name="email" id="email" />
+                    <label class="form-label fw-bold" for="email">E-mail:</label>
+                    <input class="form-control shadow-sm" type="email" name="email" id="email" />
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label" for="tel">Telefone:</label>
-                    <input class="form-control" type="tel" name="tel" id="tel" />
+                    <label class="form-label fw-bold" for="tel">Telefone:</label>
+                    <input class="form-control shadow-sm" type="tel" name="tel" id="tel" />
                 </div>
 
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary col-4 mt-2">Submit</button>
+                    <button type="submit" class="btn btn-primary col-4 mt-2 fw-bold text-uppercase">Enviar</button>
                 </div>
+
+                <div class="alert alert-danger mt-4 d-none error text-center" role="alert">Existe um ou mais campos não preenchidos!</div>
+                <div class="alert alert-success mt-4 d-none confirmation text-center" role="alert">Contato cadastrado com sucesso!</div>
             </form>
         </div>
 
+        <footer class="text-center">
+            <p>
+                Desenvolvido por
+                <a class="link-offset-2 link-underline-dark link-underline-opacity-0 fw-bold text-dark link-underline-opacity-75-hover" href="https://github.com/DavidAngra">David Carvalho</a>
+            </p>
+        </footer>
+
+        <!-- Scripts -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
+        <script src="js/jquery.mask.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
